[package]
name = "vortex-avro-derive"
description = "Proc macros for Vortex"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = "2.0.95"

[dev-dependencies]
apache-avro = { workspace = true }
uuid = { workspace = true }
vortex-error = { path = "../vortex-error" }

# TODO(aduffy): rename this to something that is actually good to publish.
# Maybe "vortex-avro" or something like that.
vortex-avro = { path = "../vortex-avro" }

[lints]
workspace = true
