[package]
name = "vortex-avro"
description = "Common Vortex traits that are auto-derived"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
apache-avro = { workspace = true }
uuid = { workspace = true }

vortex-avro-derive = { workspace = true }
vortex-error = { workspace = true }

[lints]
workspace = true
