[package]
name = "vortex-bench"
authors = { workspace = true }
description = "End to end vortex benchmarks"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
publish = false
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
get_dir = { workspace = true }
glob = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true, features = ["futures"] }
itertools = { workspace = true }
mimalloc = { workspace = true }
noodles-bgzf = { workspace = true, features = ["async"] }
noodles-vcf = { workspace = true, features = ["async"] }
parking_lot = { workspace = true }
parquet = { workspace = true, features = ["async"] }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tabled = { workspace = true, features = ["std"] }
target-lexicon = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tpchgen = { workspace = true }
tpchgen-arrow = { workspace = true }
tracing = { workspace = true }
tracing-perfetto = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log",
] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
vortex = { workspace = true, features = [
    "object_store",
    "files",
    "tokio",
    "zstd",
] }
