[package]
name = "vortex-btrblocks"
authors = { workspace = true }
categories = { workspace = true }
description = "BtrBlocks style compressor"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
getrandom_v03 = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
vortex-alp = { workspace = true }
vortex-array = { workspace = true }
vortex-buffer = { workspace = true }
vortex-datetime-parts = { workspace = true }
vortex-decimal-byte-parts = { workspace = true }
vortex-dict = { workspace = true }
vortex-dtype = { workspace = true }
vortex-error = { workspace = true }
vortex-fastlanes = { workspace = true }
vortex-fsst = { workspace = true }
vortex-mask = { workspace = true }
vortex-runend = { workspace = true }
vortex-scalar = { workspace = true }
vortex-sequence = { workspace = true }
vortex-sparse = { workspace = true }
vortex-utils = { workspace = true }
vortex-zigzag = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
env_logger = "0.11"
rstest = { workspace = true }
vortex-array = { workspace = true, features = ["test-harness"] }

[features]
# This feature enabled unstable encodings for which we don't guarantee stability.
unstable_encodings = []

[lints]
workspace = true

[[bench]]
name = "compress"
harness = false
test = false

[[bench]]
name = "dict_encode"
harness = false
test = false

[[bench]]
name = "stats_calc"
harness = false
test = false
