[package]
name = "vortex-btrblocks"
authors = { workspace = true }
categories = { workspace = true }
description = "BtrBlocks style compressor"
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
itertools = { workspace = true }
num-traits = { workspace = true }
pco = { workspace = true, optional = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
vortex-alp = { workspace = true }
vortex-array = { workspace = true }
vortex-buffer = { workspace = true }
vortex-compressor = { workspace = true }
vortex-datetime-parts = { workspace = true }
vortex-decimal-byte-parts = { workspace = true }
vortex-error = { workspace = true }
vortex-fastlanes = { workspace = true }
vortex-fsst = { workspace = true }
vortex-mask = { workspace = true }
vortex-onpair = { workspace = true, optional = true }
vortex-pco = { workspace = true, optional = true }
vortex-runend = { workspace = true }
vortex-sequence = { workspace = true }
vortex-sparse = { workspace = true }
vortex-utils = { workspace = true }
vortex-zigzag = { workspace = true }
vortex-zstd = { workspace = true, optional = true }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }
test-with = { workspace = true }
vortex-array = { workspace = true, features = ["_test-harness"] }
vortex-session = { workspace = true }

[features]
# This feature enabled unstable encodings for which we don't guarantee stability.
unstable_encodings = ["dep:vortex-onpair", "vortex-zstd?/unstable_encodings"]
pco = ["dep:pco", "dep:vortex-pco"]
zstd = ["dep:vortex-zstd"]

[lints]
workspace = true

[[bench]]
name = "compress"
harness = false
test = false

[[bench]]
name = "compress_listview"
harness = false
test = false
